# fleet_adapter

./: CMakeLists.txt  README.md  package.xml
include/fleet_adapter/: data.hpp  definitions.hpp  fleet_adapter.hpp  robot.hpp
launch/include/: adapter.launch.py
src/: main.cpp
src/lib/: fleet_adapter.cpp  robot.cpp
