<?xml version="1.0"?>
<package format="3">
  <name>fleet_adapter</name>
  <version>0.0.1</version>
  <description>The fleet_adapter package</description>

  <maintainer email="thales.silva@coppe.ufrj.br">Thales Silva</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rmf_fleet_adapter</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
